Fix ago display for predictions

--- a/meteography/django/broadcaster/templates/meteographer/index.html
+++ b/meteography/django/broadcaster/templates/meteographer/index.html
@@ -27,7 +27,7 @@
             {% if webcam.latest_prediction %}
               <p>
                 Latest prediction done
-                {{webcam.latest_prediction.minutes_ago}} min ago
+                {{webcam.latest_prediction.minutes_ago}} ago
                 for {{webcam.latest_prediction.minutes_target}} min later
               </p>
             {% endif %}
