--- a/meteography/django/broadcaster/templates/broadcaster/webcam.html
+++ b/meteography/django/broadcaster/templates/broadcaster/webcam.html
@@ -1,5 +1,5 @@
 {% extends "broadcaster/base.html" %}
-{% load staticfiles %}
+{% load broadcastertags %}
 
 {% block title %}{{ webcam.name }} meteography{% endblock %}
 
@@ -11,22 +11,7 @@
     <ul class="pred-recap">
       {% for params in webcam.pred_params_list %}
         <li>
-          {% if params.latest_prediction %}
-            <img src="{{ params.latest_prediction.url }}"
-                 class="thumbnail" alt="Latest {{ params.name }} prediction" />
-          {% else %}
-            <img src="{% static 'broadcaster/img/noprediction.png' %}"
-                 class="thumbnail" alt="No prediction available" />
-          {% endif %}
-          <div>
-            <header>{{ params.name }}</header>
-            {% if params.latest_prediction %}
-              <p>
-                Latest prediction done on {{params.latest_prediction.comp_date}}
-                for {{params.latest_prediction.minutes_target}} min later
-              </p>
-            {% endif %}
-          </div>
+          {% latest_prediction params %}
         </li>
       {% endfor %}
     </ul>
