--- a/meteography/django/broadcaster/templates/broadcaster/webcam.html
+++ b/meteography/django/broadcaster/templates/broadcaster/webcam.html
@@ -7,17 +7,36 @@
   <h1>{{ webcam.name }} meteography</h1>
   <section>
     <h2>List of prediction configurations</h2>
+
     {% if webcam.pred_params_list %}
-    <ul class="pred-recap">
-      {% for params in webcam.pred_params_list %}
-        <li>
-          {% latest_prediction params %}
-        </li>
-      {% endfor %}
-    </ul>
+      <ul class="pred-recap alternated">
+        {% for params in webcam.pred_params_list %}
+          <li>
+            {% latest_prediction params %}
+
+            <table class="pred-history">
+              <tr>
+                <td>Computed on</td>
+                <td>Predicted</td>
+                <td>Happened</td>
+                <td>Error</td>
+              </tr>
+              {% for prediction in params.history %}
+                <tr>
+                  <td>{{ prediction.comp_date }}</td>
+                  <td><img src="{{ prediction.url }}" class="thumbnail" /></td>
+                  <td><img src="{{ prediction.actual }}" class="thumbnail" /></td>
+                  <td>{{ prediction.error }}</td>
+                </tr>
+              {% endfor %}
+            </table>
+          </li>
+        {% endfor %}
+      </ul>
     {% else %}
       <p>No prediction configuration available.</p>
     {% endif %}
+
   </section>
 {% endblock %}
 
