--- a/meteography/django/broadcaster/templates/broadcaster/webcam.html
+++ b/meteography/django/broadcaster/templates/broadcaster/webcam.html
@@ -14,22 +14,26 @@
           <li>
             {% latest_prediction params %}
 
-            <table class="pred-history">
-              <tr>
-                <td>Computed on</td>
-                <td>Predicted</td>
-                <td>Happened</td>
-                <td>Error</td>
-              </tr>
-              {% for prediction in params.history %}
-                <tr>
-                  <td>{{ prediction.comp_date }}</td>
-                  <td><img src="{{ prediction.url }}" class="thumbnail" /></td>
-                  <td><img src="{{ prediction.actual }}" class="thumbnail" /></td>
-                  <td>{{ prediction.error }}</td>
-                </tr>
-              {% endfor %}
-            </table>
+            <div>
+                <table class="pred-history">
+                  <tr>
+                    <td>Computed on</td>
+                    <td>Predicted</td>
+                    <td>Happened</td>
+                    <td>Error</td>
+                  </tr>
+                  {% for prediction in params.history %}
+                    <tr>
+                      <td>{{ prediction.comp_date }}</td>
+                      <td><img src="{{ prediction.url }}" class="thumbnail" /></td>
+                      <td><img src="{{ prediction.actual }}" class="thumbnail" /></td>
+                      <td>{{ prediction.error }}</td>
+                    </tr>
+                  {% endfor %}
+                </table>
+                <img src="{% url 'error_graph' webcam.webcam_id params.name %}"
+                     class="errgraph" alt="Evolution of prediction error over time"/>
+            </div>
           </li>
         {% endfor %}
       </ul>
