--- a/meteography/django/broadcaster/templates/broadcaster/latest_prediction.html
+++ b/meteography/django/broadcaster/templates/broadcaster/latest_prediction.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<div class="lastest-pred">
+<div class="latest-pred">
     {% if latest_prediction %}
       <img src="{{ latest_prediction.url }}"
            class="thumbnail" alt="Latest {{ name }} prediction" />
