--- a/meteography/django/broadcaster/static/broadcaster/style.css
+++ b/meteography/django/broadcaster/static/broadcaster/style.css
@@ -21,18 +21,25 @@ body {
 .pred-recap.linked-list > li:hover {
   background-color: #ccccff;
 }
-.pred-recap .thumbnail {
+
+.latest-pred .thumbnail {
   vertical-align: middle;
 }
-.pred-recap div {
+.latest-pred div {
   display: inline-block;
   vertical-align: middle;
 }
+.latest-pred p {
+  margin-top: 5px;
+}
 
+.details-panel {
+  margin: 10px 0px 0px 30px;
+  vertical-align: middle;
+}
 .pred-history {
-  margin-left: 30px;
   border: 1px solid;
-  float: left;
+  display: inline-block;
 }
 .pred-history td {
   padding: 5px;
@@ -40,5 +47,5 @@ body {
 
 .errgraph {
   width: 500px;
-  margin: 2px 10px;
+  margin: 10px;
 }
