Fix timezone issues

--- a/meteography/django/broadcaster/templates/broadcaster/webcam.html
+++ b/meteography/django/broadcaster/templates/broadcaster/webcam.html
@@ -18,7 +18,7 @@
               <div class="details-panel">
                 <table class="pred-history">
                   <tr>
-                    <td>Computed on</td>
+                    <td>Computed on (UTC)</td>
                     <td>Predicted</td>
                     <td>Happened</td>
                     <td>Error</td>
