--- a/meteography/django/broadcaster/templates/broadcaster/index.html
+++ b/meteography/django/broadcaster/templates/broadcaster/index.html
@@ -4,24 +4,26 @@
 {% block title %}Meteography - Ciel fastueux{% endblock %}
 
 {% block body %}
-  <h1>Meteography</h1>
-  <p>
-    This is a meteographer. Maybe you have seen your grandfather look at the
-    horizon and tell you what the weather will be the day after?
-    That is what Meteography is: using a stream of photos from a fixed webcam
-    to predict what the sky will be like in the near future.
-    It does not forecast the weather in terms of temperature, wind, rain, etc.
-    but rather generate an image picturing what the webcam should capture later.
-  </p>
-  <p>
-    This is a project originally started to learn about machine learning, it is
-    still in early development phase. The source code is available on
-    <a href="https://github.com/rthouvenin/meteography">Github</a>.
-  </p>
-  <section>
+  <div class="row">
+      <h1>Meteography</h1>
+      <p>
+        This is a meteographer. Maybe you have seen your grandfather look at the
+        horizon and tell you what the weather will be the day after?
+        That is what Meteography is: using a stream of photos from a fixed webcam
+        to predict what the sky will be like in the near future.
+        It does not forecast the weather in terms of temperature, wind, rain, etc.
+        but rather generate an image picturing what the webcam should capture later.
+      </p>
+      <p>
+        This is a project originally started to learn about machine learning, it is
+        still in early development phase. The source code is available on
+        <a href="https://github.com/rthouvenin/meteography">Github</a>.
+      </p>
+  </div>
+  <section class="row">
     <h2>List of cameras</h2>
     {% if webcams %}
-      <ul class="pred-recap linked-list">
+      <ul class="cam-list linked-list">
         {% for webcam in webcams %}
           <li>
             <a href="{% url 'webcam' webcam.webcam_id %}">
