--- a/meteography/django/broadcaster/templates/broadcaster/base.html
+++ b/meteography/django/broadcaster/templates/broadcaster/base.html
@@ -2,13 +2,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>{% block title %}Meteography{% endblock %}</title>
-  <link rel="stylesheet" href="{% static 'broadcaster/normalize.css' %}"/>
-  <link rel="stylesheet" href="{% static 'broadcaster/style.css' %}"/>
+
+  <link rel="stylesheet" href="{% static 'broadcaster/css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'broadcaster/css/style.css' %}"/>
+
+  <script src="{% static 'broadcaster/js/jquery-1.11.3.min.js' %}"></script>
+  <script src="{% static 'broadcaster/js/bootstrap.min.js' %}"></script>
 </head>
 <body>
-  {% block body %}{% endblock %}
+  <div class="container">
+    {% block body %}{% endblock %}
+  </div>
 </body>
 </html>
-
