--- a/meteography/django/broadcaster/templates/broadcaster/webcam.html
+++ b/meteography/django/broadcaster/templates/broadcaster/webcam.html
@@ -4,45 +4,76 @@
 {% block title %}{{ webcam.name }} meteography{% endblock %}
 
 {% block body %}
-  <h1>{{ webcam.name }} meteography</h1>
-  <section>
-    <h2>List of prediction configurations</h2>
+  <h1 class="row">{{ webcam.name }} meteography</h1>
 
-    {% with params_list=webcam.predictionparams_set.all %}
-      {% if params_list %}
-        <ul class="pred-recap">
-          {% for params in params_list %}
-            <li>
-              {% latest_prediction params %}
+  {% with params_list=webcam.predictionparams_set.all %}
+    {% if params_list %}
+      {% for params in params_list %}
+        <section class="row">
+          <h2>Prediction configuration {{params.name}}</h2>
 
-              <div class="details-panel">
-                <table class="pred-history">
-                  <tr>
-                    <td>Computed on (UTC)</td>
-                    <td>Predicted</td>
-                    <td>Happened</td>
-                    <td>Error</td>
-                  </tr>
-                  {% for prediction in params.history %}
-                    <tr>
-                      <td>{{ prediction.comp_date }}</td>
-                      <td><img src="{{ prediction.url }}" class="thumbnail" /></td>
-                      <td><img src="{{ prediction.actual }}" class="thumbnail" /></td>
-                      <td>{{ prediction.error|floatformat:2 }}</td>
-                    </tr>
-                  {% endfor %}
-                </table>
-                <img src="{% url 'error_graph' webcam.webcam_id params.name %}"
-                     class="errgraph" alt="Evolution of prediction error over time"/>
-              </div>
-            </li>
-          {% endfor %}
-        </ul>
+          {% latest_prediction params %}
 
-      {% else %}
-        <p>No prediction configuration available.</p>
-      {% endif %}
-    {% endwith %}
-  </section>
+          <div class="row details-panel">
+            <div class="col-xs-12 col-md-6 history-tabs">
+                <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active">
+                      <a href="#hist-latest" aria-controls="hist-latest" role="tab" data-toggle="tab">
+                        Latest
+                      </a>
+                    </li>
+                    <li role="presentation">
+                      <a href="#hist-worst" aria-controls="hist-worst" role="tab" data-toggle="tab">
+                        Highest error
+                      </a>
+                    </li>
+                    <li role="presentation">
+                      <a href="#hist-best" aria-controls="hist-best" role="tab" data-toggle="tab">
+                        Lowest error
+                      </a>
+                    </li>
+                    <li role="presentation">
+                      <a href="#hist-random" aria-controls="hist-random" role="tab" data-toggle="tab">
+                        Random
+                      </a>
+                    </li>
+                </ul>
+
+                <div class="tab-content">
+                  <div role="tabpanel" class="tab-pane active" id="hist-latest">
+                    <table class="pred-history">
+                      <tr>
+                        <td>Computed on (UTC)</td>
+                        <td>Predicted</td>
+                        <td>Happened</td>
+                        <td>Error</td>
+                      </tr>
+                      {% for prediction in params.history %}
+                        <tr>
+                          <td>{{ prediction.comp_date }}</td>
+                          <td><img src="{{ prediction.url }}" class="thumbnail" /></td>
+                          <td><img src="{{ prediction.actual }}" class="thumbnail" /></td>
+                          <td>{{ prediction.error|floatformat:2 }}</td>
+                        </tr>
+                      {% endfor %}
+                    </table>
+                  </div>
+                  <div role="tabpanel" class="tab-pane" id="hist-worst">Not implemented</div>
+                  <div role="tabpanel" class="tab-pane" id="hist-best">Not implemented</div>
+                  <div role="tabpanel" class="tab-pane" id="hist-random">Not implemented</div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+              <img src="{% url 'error_graph' webcam.webcam_id params.name %}"
+                 class="errgraph" alt="Evolution of prediction error over time"/>
+            </div>
+          </div>
+        </section>
+      {% endfor %}
+
+    {% else %}
+      <p>No prediction configuration available.</p>
+    {% endif %}
+  {% endwith %}
 {% endblock %}
 
